Make use of a few new language features